@@ -9,6 +9,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Getter
 @RequiredArgsConstructor
@@ -17,7 +18,7 @@ public enum Role {
     VISITOR(Collections.emptySet()),
     ADMIN(
             Set.of(
-                    Permission.ADMIN_GET,
+
                     Permission.ADMIN_CREATED,
                     Permission.ADMIN_UPDATE,
                     Permission.ADMIN_DELETE,
@@ -41,8 +42,8 @@ public enum Role {
     public List<SimpleGrantedAuthority> getAuthorities() {
         var authorities = getPermissions()
                 .stream()
-                .map(permission -> new SimpleGrantedAuthority(permission.name()))
-                .toList();
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
 
         authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
         return authorities;
